--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,17 @@
 Package: crepuscule
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
+Title: Find sun event for latitude, longitude and date data
+Version: 0.0.0.9000
+Authors@R: c(
+    person("Rémi", "Patin", , "remi.patin@cefe.cnrs.fr", c("aut", "cre")))
+Description: Calculate sunrise, sunset as well as nautical and civil dawn and
+    dusk
 License: What license is it under?
 LazyData: TRUE
+Depends:
+    R (>= 3.3.1)
+Imports:
+    sp (>= 1.2-3),
+    maptools (>= 0.8-39),
+    dplyr (>= 0.5.0)
+RoxygenNote: 5.0.1
